--- a/test.css
+++ b/test.css
@@ -1,11 +1,34 @@
-.container{
-    max-width: 600px;
+body {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+div.header {
+    display: flex;
+    height: 70px;
+    align-items: center;
+    background: tan;
+    width: 100%;
+    justify-content: center;
+}
+div.header>h1{
+    font-style: italic;
+}
+.center {
     margin: auto;
+    width: 60%    
+}
+.container{
     display: flex;
 }
 .fixed{
     width: 300px;
+    background-color: tan;
 }
 .flex-item{
     flex-grow: 1;
+    background-color: aqua;
+}
+iframe {
+    display: block;
+    height: 100%;
+    max-height: 580px;
 }
