--- a/test.css
+++ b/test.css
@@ -1,11 +1,11 @@
 body {
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-family: "Open Sans", "Trebuchet MS", Helvetica, sans-serif;
 }
 div.header {
     display: flex;
     height: 70px;
     align-items: center;
-    background: tan;
+    background-image: linear-gradient(141deg, red 0%, yellow 51%, red 75%);
     width: 100%;
     justify-content: center;
 }
@@ -18,17 +18,39 @@ div.header>h1{
 }
 .container{
     display: flex;
+    padding: 5px;
 }
 .fixed{
     width: 300px;
-    background-color: tan;
+    /* background-color: tan; */
+    padding: inherit;
 }
 .flex-item{
     flex-grow: 1;
-    background-color: aqua;
+    /* background-color: aqua; */
+    padding: inherit;
+    text-align: justify;
 }
 iframe {
     display: block;
     height: 100%;
     max-height: 580px;
+    min-height: 380px;
+}
+p.first {
+    padding-top: 0px;
+    margin-top: 0px;
+}
+span.dot::before {
+    font-size: 30;
+    content: "\22C5";
+}
+span.artist {
+    font-weight:  bold;
+}
+span.song {
+    font-style: italic;
+}
+div.title {
+
 }
